# elmo-collector

./: .gitignore  Cargo.toml
scripts/: create_db.sh  create_tables.sh  create_user.sh  dump_sqlite_tables.sh  grant_user_permissions.sh  main.sh
scripts/gcp/: create_db.sh  destroy_db.sh
sql/: create_tables.sql  grant_user_permissions.sql  update_auto_increment_starts.sql
src/: db_insert.rs  lib.rs  main.rs  query_slurm.rs
