[package]
name = "elmo-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full", "test-util", "rt", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.15.11"

[dev-dependencies]
sqlx = {version = "0.8", features = ["sqlite"]}